--- a/css/custom.css
+++ b/css/custom.css
@@ -35,7 +35,7 @@ html, body{
     /* Rectangle 3: */
     position: fixed;
     width: 100%;
-    height: 96px;
+    height: 5rem;
     
     background: #0D202F;
 /*    border: 1px solid #979797;*/
@@ -52,7 +52,7 @@ html, body{
     font-size: 3rem;
     color: #FFFFFF;
     padding-top: 0.3125rem;
-    margin-top: 24px;
+    margin-top: 0rem;
     margin-left: 1.375rem;
     margin-right: 1.375rem;
     text-align: center;
@@ -73,9 +73,8 @@ html, body{
     background-image: url("/img/img3_vlowres.jpg");
     background: rgba(63,63,63,0.);
     box-shadow: inset 0 1px 3px 0 rgba(0,0,0,0.50);
-/*    padding-bottom: 100px;*/
     height: auto;
-    padding-top: 100px;
+    padding-top: 75px;
     padding-bottom: 125px;
     z-index: -1;
 }
@@ -83,7 +82,7 @@ html, body{
 .hero::before{
     content: "";
     display: block;
-    position: absolute;
+    position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
@@ -193,9 +192,9 @@ a:hover{
 /* Larger than mobile */
 @media only screen and (min-width: 522px) {
     .title-text {
-        margin-top: 20px;
+        
         margin-left: 1.375rem;
-        text-align: left;
+        
     }
     
     .hero-inprogress{
@@ -207,9 +206,6 @@ a:hover{
 @media only screen and (min-width: 755px) {
     html, body{font-size: 16px;}
     
-    .title-text {
-        margin-top: 18px;
-    }
     
     .hero-inprogress{
         font-size: 3rem;
@@ -217,8 +213,13 @@ a:hover{
     
 }
 
-/* Most likely desktop */
-@media only screen and (min-width: 1000px) {
+/* Most likely not mobile */
+@media only screen and (min-width: 801px) {
+    
+    .title-text {
+        text-align: left;
+    }
+    
     .hero{
         background-image: url("/img/img3_medres.jpg");
     }
