--- a/css/custom.css
+++ b/css/custom.css
@@ -159,7 +159,7 @@ html, body{
     display: inline-block;    
     height: 72px;
     width: 72px;
-    background: #CEC224;
+    background: #E2D41B;
     border: 4px solid #FFFFFF;
     box-shadow: 0 4px 4px 0 rgba(0,0,0,0.50);
     border-radius: 50px;  
@@ -171,6 +171,10 @@ html, body{
     position: relative;
     bottom: 4px;
     color: white;
+}
+
+.action-doc:hover{
+    background: #B8AD1F; 
 }
 
 .action-email{
@@ -193,7 +197,7 @@ html, body{
     color: white;
 }
 
-a:hover{
+.action-email:hover{
     background: #279330;
 }
 
