--- a/css/custom.css
+++ b/css/custom.css
@@ -1,259 +1,172 @@
-html, body{
+html, body {
     height: 100%;
     width: 100%;
     font-size: 12px;
     margin: 0px;
     font-family: 'Open Sans', sans-serif;
+    background-color: black;
+    line-height: 1.33;
 }
 
-/*
- For mobile phones: 
-[class*="col-"] {
-    width: 100%;
-    
+.one.column,
+.one.columns {
+    width: 4.66666666667%;
 }
-*/
+
+.two.columns {
+    width: 13.3333333333%;
+}
+
+.three.columns {
+    width: 22%;
+}
+
+.four.columns {
+    width: 30.6666666667%;
+}
+
+.five.columns {
+    width: 39.3333333333%;
+}
+
+.six.columns {
+    width: 48%;
+}
+
+.seven.columns {
+    width: 56.6666666667%;
+}
+
+.eight.columns {
+    width: 65.3333333333%;
+}
+
+.nine.columns {
+    width: 74.0%;
+}
+
+.ten.columns {
+    width: 82.6666666667%;
+}
+
+.eleven.columns {
+    width: 91.3333333333%;
+}
+
+.twelve.columns {
+    width: 100%;
+    margin-left: 0;
+}
+
+#spacer {
+    height: 0px;
+    background: #000000;
+}
 
 /* Larger than mobile */
 @media only screen and (min-width: 522px) {
-    html, body{
+    html, body {
         font-size: 14px;
+    }
+
+    .container {
+        margin-bottom: auto;
+    }
+
+    #spacer {
+        height: 150px;
+        background: #000000;
     }
 }
 
 /* Larger than mobile */
 @media only screen and (min-width: 755px) {
-    html, body{font-size: 16px;}
+    html, body {
+        font-size: 16px;
+    }
 }
 
-
-
-.section{
-    margin: 0px;
-}
-
-.header{
-    /* Rectangle 3: */
-    position: fixed;
+.container {
+    position: relative;
     width: 100%;
-    height: 5rem;
-    
-    background: #0D202F;
-/*    border: 1px solid #979797;*/
-    
-    box-shadow: 0 4px 4px 0 rgba(0,0,0,0.50);
-
-    z-index: 1;
+    max-width: 512px;
+    background-color: whitesmoke;
 }
 
-.title-text{
-    /* Stanley Cheung: */
-    display: block;
-    /* Stanley Cheung: */
-    font-family: OpenSans-Bold;
-    font-size: 3rem;
-    color: #FFFFFF;
-    padding-top: 0.3125rem;
-    margin-top: 0rem;
-    margin-left: 1.375rem;
-    margin-right: 1.375rem;
+.row {
+    display: flex;
+}
+
+.row.info {
+    padding-bottom: 14px;
+}
+
+.category {
+    padding-left: 20px;
+    font-weight: 700;
+}
+
+.desc {
+    padding-left: 54px;
+}
+
+#menu {
+    margin-bottom: 20px;
+    margin-top: 20px;
+    margin-left: 24px;
+}
+
+#header {
+    height: 64px;
+    background: #2D525F;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.50);
+}
+
+#status {
+    padding-top: 32px;
+}
+
+#app-title {
+    color: white;
+    font-size: 20px;
+    margin-left: -4px;
+    padding-top: 19px;
+    padding-bottom: 20px;
+}
+
+hr {
+    margin-top: 18px;
+    margin-bottom: 38px;
+    margin-left: 10px;
+    margin-right: 10px;
+    border-color: #424242;
+}
+
+.action {
     text-align: center;
-}
-
-.title-text-line{
-    /* Line: */
-    border: 2px solid #156E1C;
-}
-
-.hero{
-    /* Rectangle 4: */
-    background: #636363;
-    
-    background-size: cover;
-    background-repeat:no-repeat;
-    background-position:center;
-    background-image: url("/img/img3_vlowres.jpg");
-    background: rgba(63,63,63,0.);
-    box-shadow: inset 0 1px 3px 0 rgba(0,0,0,0.50);
-    height: auto;
-    padding-top: 75px;
-    padding-bottom: 150px;
-    z-index: -1;
-    
-    
-}
-
-.hero::before{
-    content: "";
-    display: block;
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: rgba(0,0,0,0.25);
-    z-index:0;
-    
-
-}
-
-.hero-title{
-    /* Main Body: */
-    font-family: OpenSans-Bold;
-    font-size: 4rem;
-    color: #FFFFFF;
-    text-align: center;
-    padding-top: 3.125rem;
-    line-height: 125%;
-}
-
-.hero-inprogress{
-    /* <Site currently in work>: */
-    font-family: OpenSansLight-Italic;
-    font-size: 2.5rem;
-    color: #FFFFFF;
-    opacity: 0; /* Hide for now */
-    text-align: center;
-    margin-bottom: 3.375rem;
-}
-
-.hero-services{
-    /* Panel: Services: */
-    background: #FFFFFF;
-    box-shadow: 1px 4px 4px 0 rgba(0,0,0,0.50);
-    /* Line: */
-/*    border: 1px solid #979797;*/
-    /* Services: */
-    font-family: OpenSans-Bold;
-    font-size: 1.875rem;
-    color: #4A4A4A;
-    width: 24.5rem;
-    margin: auto;
-    margin-bottom: 2rem;
-    
-    opacity:0.90;
-    background-color: #EFEFEF;
-}
-
-.hero-services-title{
-    margin-left: 1.125rem;
-    padding-top: 0.375rem;
-}
-
-.hero-services-item{
-    /* Item: */
-    font-family: OpenSans;
-    font-size: 1.5rem;
-    color: #4A4A4A;
-    line-height: 1.75rem;
-    margin-left: 2.75rem;
-}
-
-.action{
-    position: fixed;
-    width: 100%;
-    text-align: center;
-    margin: 0px;
-    bottom: 35px;
+    margin-top: 12px;
+    margin-bottom: 12px;
     z-index: 2;
 }
 
-.action-doc{
-    display: inline-block;    
-    height: 72px;
-    width: 72px;
-    background: #E2D41B;
-    border: 4px solid #FFFFFF;
-    box-shadow: 0 4px 4px 0 rgba(0,0,0,0.50);
-    border-radius: 50px;  
-    font-size: 48px;
-    margin-right: 2.5rem;
+#action-email {
+    display: inline-block;
+    height: 48px;
+    width: 48px;
+
+    background: #00D1CF;
+    border: 2px solid #FFFFFF;
+    box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.50);
+    border-radius: 50px;
+    font-size: 32px;
 }
 
-.action-doc-icon{
+.action-email-icon {
     position: relative;
-    bottom: 4px;
+    bottom: -2px;
     color: white;
 }
 
-.action-doc:hover{
-    background: #B8AD1F; 
-}
-
-.action-email{
-    display: inline-block;    
-    height: 72px;
-    width: 72px;
-    
- 
-    background: #56D160;
-    border: 4px solid #FFFFFF;
-    box-shadow: 0 4px 4px 0 rgba(0,0,0,0.50);
-    border-radius: 50px;  
-    font-size: 48px;
-    margin-left: 2.5rem;
-}
-
-.action-email-icon{
-    position: relative;
-    bottom: 4px;
-    color: white;
-}
-
-.action-email:hover{
-    background: #279330;
-}
-
-
-
-.last{
-    padding-bottom: 18px;
-}
-
-
-.footer{
-    /* Rectangle 6: */
-    position: fixed;
-    width: 100%;
-    height: 75px;
-    bottom: 0px;
-    background: #092437;
-/*    border: 1px solid #979797;*/
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.50);
-    z-index: 1;
-}
-
-/* Larger than mobile */
-@media only screen and (min-width: 522px) {
-    .title-text {
-        margin-left: 1.375rem;
-        
-    }
-    
-    .hero-inprogress{
-        font-size: 2.8rem;
-    }
-}
-
-/* Larger than mobile */
-@media only screen and (min-width: 755px) {
-    html, body{font-size: 16px;}
-    
-    
-    .hero-inprogress{
-        font-size: 3rem;
-    }
-    
-}
-
-/* Most likely not mobile */
-@media only screen and (min-width: 801px) {
-    
-    .title-text {
-        text-align: left;
-    }
-    
-    .hero{
-        background-image: url("/img/img3_medres.jpg");
-    }
+#action-email:hover {
+    background: #12A3A2;
 }
